# pay-calc

./: .gitignore  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  analysis.py  calc_ytd.py  config.yaml  config.yaml.example  drive_sync.py  extract_pay_stub.py  extract_w2.py  gemini_client.py  generate_tax_projection.py  process_year.py  projection.py  pyproject.toml  requirements.txt  setup.py
docs/: MCP.md  README.md
parsers/: stub_her_2024.yaml  stub_him_2024.yaml  w2_generic.yaml
paycalc/: __init__.py  gemini_client.py
paycalc/cli/: __init__.py  __main__.py  config_commands.py  model_commands.py  profile_commands.py  records_commands.py  rsus_commands.py  settings_commands.py  stubs_commands.py  withhold_commands.py
paycalc/config/: defaults.yaml  mappings.yaml  tax_rules.yaml
paycalc/mcp/: __init__.py  server.py
paycalc/schemas/: __init__.py  form_1040.json  stub.json  w2.json  w2_boxes.json
paycalc/sdk/: __init__.py  analysis.py  benefits.py  comp_plan.py  config.py  gaps.py  income_projection.py  party_config.py  records.py  rsus.py  schemas.py  stub_model.py  supplemental.py  tax.py  w2.py  w4.py  withholding.py
processors/: __init__.py  employer_a.py  employer_b.py  engine.py
scripts/: max_regular_401k_contribs.py  test_w4_derive_all.py
source-refs/: README.md
tax-rules/: 2024.yaml  2025.yaml  2026.yaml
tests/: test_records_e2e.py  test_yaml_engine.py
tests/fixtures/: README.md  acme_stub_parser.yaml
tests/unit/: test_identify_pay_type.py  test_model_regular_pay.py  test_model_validate.py  test_records_filter.py  test_stub_model.py  (+4 more)
(+18 files in other folders)
